# cholrot

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  RELEASE.md  pyproject.toml  setup.py
.github/workflows/: tests.yml  wheels.yml
benchmarks/: bench_identity.py  bench_rank1.py
benchmarks/results/: README.md
docs/: Makefile  algorithms.rst  api.rst  conf.py  installation.rst  license.rst  references.rst  release.rst
docs/_build/doctrees/: algorithms.doctree  api.doctree  benchmarks.doctree  environment.pickle  index.doctree  installation.doctree  manual.doctree  references.doctree  release.doctree
docs/_build/html/: .buildinfo  algorithms.html  api.html  benchmarks.html  genindex.html  index.html  installation.html  license.html  manual.html  objects.inv  references.html  release.html  search.html  searchindex.js
docs/_build/html/.doctrees/: algorithms.doctree  api.doctree  benchmarks.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  manual.doctree  references.doctree  release.doctree
docs/_build/html/_sources/: benchmarks.rst.txt  index.rst.txt  manual.rst.txt
docs/_build/latex/: cholrot-manual.fdb_latexmk  cholrot-manual.fls  cholrot-manual.tex
src/cholrot/: __init__.py  _core_ext.cpp  core.py
src/cholrot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py  test_identity_matvec.py  test_regression.py
