[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "cholrot"
version = "0.1.0"
description = "Rank-one Cholesky update/downdate, implicit factor-vector products, and rank-one Cholesky solves."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  {name = "Shohruh Miryusupov"}
]
keywords = ["cholesky", "downdate", "rank-one update", "hyperbolic rotations", "numerical linear algebra"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "build>=1", "twine>=5", "cibuildwheel>=3", "pybind11>=2.12", "sphinx>=7", "furo>=2024.1"]
docs = ["sphinx>=7", "furo>=2024.1"]

[project.urls]
Homepage = "https://github.com/photo-shmir/cholrot"
Repository = "https://github.com/photo-shmir/cholrot"
Issues = "https://github.com/photo-shmir/cholrot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-manylinux_i686 *-win32"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
